2014-06-29  Gerald Pfeifer  <gerald@pfeifer.com>

	* faq.html: Remove two absolute links/references.

2014-06-28  Gerald Pfeifer  <gerald@pfeifer.com>

	* faq.html: Remove five obsolete entries.

2013-03-31  Gerald Pfeifer  <gerald@pfeifer.com>

	* done.html: Remove broken link to iRATE.
	Adjust link to Swarm.

2012-12-29  Gerald Pfeifer  <gerald@pfeifer.com>

	* news.html: Refer to Jessie without using a link.

2012-12-29  Gerald Pfeifer  <gerald@pfeifer.com>

	* gcj2.html: Remove link to our old CVS page. 

2012-12-21  Gerald Pfeifer  <gerald@pfeifer.com>

	* faq.html: Remove question about Linker bug on Solaris.

2012-11-11  Gerald Pfeifer  <gerald@pfeifer.com>

	* papers/compiling.html: Transform into XHTML 1.0 Transitional.

2012-11-03  Gerald Pfeifer  <gerald@pfeifer.com>

	* papers/compiling.html: Remove broken heading/navigation.
	Make a huge amount of markup fixes.

2012-11-02  Gerald Pfeifer  <gerald@pfeifer.com>

	* faq.html: Remove question about building in the source tree.

2012-11-02  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* index.html (href): Adjust reference to libjit.

2012-11-02  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* faq.html: Update reference to Java language specification.
	Remove reference to recent snapshots.

2012-11-01  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* news.html: Use https for redhat.com.

2012-11-01  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* status.html: Remove comparison with Kaffe.

2012-10-31  Gerald Pfeifer  <gerald@pfeifer.com>

	* papers/nosb.html: Remove reference to sources.redhat.com.

2012-10-31  Gerald Pfeifer  <gerald@pfeifer.com>

	* libgcj-platforms.html: Remove.

2012-10-28  Gerald Pfeifer  <gerald@pfeifer.com>

	* index.html: Update reference to rhug (and consolidate links).

2012-10-28  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* build-snapshot.html: Refer to GNU/Linux, simplify link to
	installation documentation, remove reference to an old FAQ,
	some editorial changes.
			 