@@ -1,129 +1,0 @@
-<html>
-
-<head>
-<title>How to build GCJ/LIBGCJ from snapshots or checkouts</title>
-</head>
-
-<body>
-
-<h1>How to build and run libgcj/gcj snapshots or checkouts</h1>
-
-<table border="0" cellpadding="4" width="95%">
-<tr bgcolor="#cccccc">
-<td>
-<pre>
-1. <a href="../snapshots.html">Get a GCC snapshot</a> or <a href="../svn.html">check out the sources</a>.
-</pre>
-</td>
-</tr>
-
-<tr bgcolor="#dddddd">
-<td>
-<pre>
-2. Make a compile directory
-
-  $ mkdir compile
-</pre>
-</td>
-</tr>
-
-<tr bgcolor="#cccccc">
-<td>
-<pre>
-3. Move the snapshot into the compile dir, e.g.
-
-  $ cd compile
-  $ mv ../gcc-20001211.tar.gz .
-  $ gunzip *.gz
-  $ tar xfv *.tar
-  $ ln -s gcc-20001211 gcc
-</pre>
-</td>
-</tr>
-
-<tr bgcolor="#dddddd">
-<td>
-<pre>
-4. Tell the build system you want to build libgcj
-
-  Have a look at the toplevel configure.in (gcc/configure.in) and
-  make sure that the variable `noconfigdirs' isn't assigned to
-  something (like target-libjava or ${libgcj}.)
-<br />
-  Also, check for platform-specific assignments of `noconfigdirs' with
-  ${libgcj}; if ${libgcj} is listed for your platform, remove it before
-  configuring.
-</pre></td></tr>
-
-<tr bgcolor="#cccccc">
-<td>
-<pre>
-5. Compile and install gcc/gcj/libgcj
-
-  $ cd compile
-  $ mkdir objdir
-  $ cd objdir
-  $ ../gcc/configure --enable-threads=posix --prefix=/home/joerg/gcc \
-    --enable-shared --enable-languages=c++,java \
-    --with-as=/opt/gnu/bin/as --with-ld=/opt/gnu/bin/ld
-  $ make bootstrap
-  $ make
-  $ make install
-
-The Boehm GC is the collector picked up by default.
-
-If you compile under GNU/Linux you could omit the last two options. Under
-Solaris you'll need them. If you omit '--prefix' the compiled source
-will be installed under /usr/local. For more information about
-installing gcc and/or configuration options see:
-
-  <a href="https://gcc.gnu.org/install/">https://gcc.gnu.org/install/</a>
-
-</pre>
-</td>
-</tr>
-
-<tr bgcolor="#dddddd">
-<td>
-<pre>
-6. Adjust your environment
-
-Reflect your choice of --prefix value to your environment. For csh
-compatible shells, this would be something like the following:
-
-setenv PATH /home/joerg/gcc/bin:$PATH
-setenv LD_LIBRARY_PATH /home/joerg/gcc/lib
-</pre>
-</td>
-</tr>
-
-<tr bgcolor="#cccccc">
-<td>
-<pre>
-7. Edit a file HelloWorld.java
-
-  public class HelloWorld {
-    public static void main(String [] args) {
-      System.out.println("Hello");
-    }
-  }
-</pre>
-</td>
-</tr>
-
-<tr bgcolor="#dddddd">
-<td>
-<pre>
-8. Compile and run HelloWorld
-
- $ gcj --main=HelloWorld -o HelloWorld HelloWorld.java
- $ ./HelloWorld
-</pre>
-</td>
-</tr>
-
-</table>
-
-
-</body>
-</html>
