@@ -13,8 +13,7 @@
 <p>We've written a front end to the GCC compiler which can natively
 compile both Java<sup><a href="#javatm">tm</a></sup> source and
 bytecode files.  The compiler can also generate class files.  This new
-front end is integrated into the <a
-href="http://gcc.gnu.org/">GCC</a> project.</p>
+front end is integrated into GCC.</p>
 
 
 <h2>What you get</h2>
@@ -60,11 +59,7 @@ href="http://gcc.gnu.org/">GCC</a> project.</p>
 
     <p>In order to make full executables, you'll need to link the
     output of gcj with the appropriate runtime code.  See <a
-    href="libgcj2.html">the libgcj page</a> for details on the runtime.
-    Note that you'll want to configure GCC to build libjava; see
-    <a href="build-snapshot.html">configuration and build instructions
-    for GCJ</a>.</p>
-
+    href="libgcj2.html">the libgcj page</a> for details on the runtime.</p>
 
     <p>There are also <a href="compile.html">more detailed
 	instructions</a> on compiling Java programs.</p>
