@@ -31,32 +31,8 @@
 
     <h2>How to build it</h2>
 
-    <p>Just follow the directions for
-    <a href="build-snapshot.html">building</a> GCJ.</p>
-
-    <p>There are a few options you might consider passing to
-    ``configure'':</p>
-
-    <dl>
-      <dt>--enable-java-gc=TYPE</dt>
-      <dd>Enables the garbage collector.  The default type is
-      ``boehm'', for the Boehm conservative GC.</dd>
-
-      <dt>--enable-fast-character</dt>
-      <dd>libgcj includes two implementations of java.lang.Character.
-      The default implementation is small, but slow.  This option will
-      enable the faster, larger code.</dd>
-
-      <dt>--enable-threads=TYPE</dt>
-      <dd>libgcj includes a retargetable thread layer.  The value of
-	this option must be the same as the value used when building
-	gcj itself.
-	By default, no threads will be used (this is a crummy default,
-	but we just follow GCC here).
-	The only supported values are ``none'' (for no threads) and
-	``posix'' (for POSIX threads).</dd>
-
-    </dl>
+    <p>Just follow our <a href="https://gcc.gnu.org/install/">installation
+    instructions.</p>
 
 </body>
 </html>
