@@ -1,5 +1,12 @@
-2014-06-29  Gerald Pfeifer  <gerald@pfeifer.com>
+2014-06-30  Gerald Pfeifer  <gerald@pfeifer.com>
 
+	* build-snapshot.html: Remove.
+	* gcj2.html: Remove link to build-snapshot.html and GCC homepage.
+	* libgcj2.html: Replace link to build-snapshot.html by our main
+	installation instructions.  Omit redundant instructions.
+
+2014-06-29  Gerald Pfeifer  <gerald@pfeifer.com>
+	
 	* faq.html: Remove two absolute links/references.
 
 2014-06-28  Gerald Pfeifer  <gerald@pfeifer.com>
